# staticdirindex

./: LICENSE  README.md  example-action.yml  setup.cfg  setup.py
.github/workflows/: python-publish.yml
staticdirindex/: __init__.py
staticdirindex/templates/: index.html  sitemap.xml
