
[metadata]
name = staticdirindex
version = 1.4
url = https://github.com/swantzter/static-directory
author = Svante Bengtson
author_email = svante@swantzter.se
license = MIT
license_file = LICENSE
description = recursive directory listings with thumbnails
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:

[options.package_data]
  staticdirindex=templates/index.html

[options.entry_points]
console_scripts =
  staticdirindex=staticdirindex.__init__:main
